Fix field_with_errors layout bug

--- a/app/assets/stylesheets/food.scss
+++ b/app/assets/stylesheets/food.scss
@@ -71,6 +71,11 @@ body.foods {
       min-width: 0;
     }
 
+    .field_with_errors {
+      display: flex;
+      flex-direction: column;
+    }
+
     input, textarea {
       padding: 0.75rem;
 
